# Elektronik-Layout

./: .gitignore  AGENTS.md  README.md  pyproject.toml  stromkreisdoku.spec
app/: context.py  main.py
assets/: theme_dark.qss
assets/styles/: report.css
assets/templates/: report.html
models/: schema.py
services/: database.py  export_service.py  graph_layout.py  project_fs.py
ui/: graph_view.py  inspector.py  main_window.py  panel_view.py  rcd_mapping_wizard.py  room_planner.py  test_mode_wizard.py
