[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stromkreisdoku"
version = "0.1.0"
description = "Windows desktop app for house electrical documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.7",
  "SQLAlchemy>=2.0",
  "Jinja2>=3.1",
]

[project.scripts]
stromkreisdoku = "app.main:main"

[tool.setuptools]
packages = ["app", "ui", "models", "services"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.qss", "*.html", "*.css", "*.svg"]
